--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,16 +32,24 @@
 	<section id='main'> 
 		
 		<header class=center><img src="img/header.jpg">
-		<h1>CARMINE E ANITA</h1>
-		<h3> Assisi, 21 Giugno 2014 </h3>
+		<!--h1>CARMINE E ANITA</h1>
+		<h3> Assisi, 21 Giugno 2014 </h3-->
 		</header>
+
+
+		<section id='testo'>
+
+			{{ content }}
+		
+		</section>
 	
 	
+
+
 	</section>
 	
 	
 	
-	{{ content }}
 	
 	
 	<div id="gallery">                         
