--- a/css/singlepage.css
+++ b/css/singlepage.css
@@ -25,7 +25,7 @@ footer img {
 
 header img {
 	width:	100%;
-	max-width:	55em;
+	max-width:	45em;
 	margin-bottom: 4em;
 }
 
@@ -53,7 +53,6 @@ body {
 	color: 			#4D4D4D;
 	margin:			0;
 	padding:		0;
-	line-height: 	1.2;
 }
 
 #main {
@@ -68,6 +67,8 @@ body {
 	padding: 2em;
 	text-align: left;
 	font-size: 1.1em;
+	line-height:   1.4;
+	text-align: justify;
 }
 
 #testo img {
@@ -156,4 +157,6 @@ header img {
 	h1 { font-size: 2.2em;}
 	h2 { font-size: 1.6em;}
 	h3 { font-size: 1.2em;}
+	#testo {text-align: left;}
+	
 }
