--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -44,7 +44,8 @@
 
 		</section>
 
-				<!-- START: Livefyre Embed -->
+		<section id='commenti'>
+		<!-- START: Livefyre Embed -->
 			<div id="livefyre-comments"></div>
 				<script type="text/javascript" src="http://zor.livefyre.com/wjs/v3.0/javascripts/livefyre.js"></script>
 				<script type="text/javascript">
@@ -65,10 +66,7 @@
 				 </script>
 				 <!-- END: Livefyre Embed -->
 
-
-	
-	
-
+		</section>
 
 	</section>
 	
