--- a/css/singlepage.css
+++ b/css/singlepage.css
@@ -12,8 +12,7 @@ blockquote {
 footer {
 	margin: 0 auto;
 	max-width: 35em;
-	padding: 2em;
-	padding-top: 0em;
+	padding: 0 2em;
 	/*text-align: justify;*/
 }
 
